# codex-manager

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-release.yml  deploy-pages.yml
apps/codex-manager/: index.html  package-lock.json  package.json  vite.config.ts
apps/codex-manager-launcher/: Cargo.toml  build.rs
apps/codex-manager-launcher/src/: main.rs
apps/codex-manager/src/: App.tsx  main.tsx  styles.css
apps/codex-manager/src-tauri/: Cargo.toml  tauri.conf.json
apps/codex-manager/src-tauri/capabilities/: default.json
apps/codex-manager/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/codex-manager/src-tauri/wix/: zh-CN.wxl
crates/codex-manager-core/: Cargo.toml
crates/codex-manager-core/src/: app_paths.rs  codex_config.rs  launcher.rs  lib.rs  paths.rs  plugin_unlock.rs  provider_sync.rs  remote.rs  settings.rs  update.rs
docs/: API.md  CLOUDFLARE_RELEASE.md  PACKAGING.md  guide-codex-ui-chinese.html  guide-computer-use-windows.html  guide-windows-install.html  guide.html  index.html  manual.html  styles.css
scripts/: generate-latest-json.mjs
scripts/windows/: dev.ps1  install.ps1
