[workspace]
resolver = "2"
members = [
  "crates/codex-manager-core",
  "apps/codex-manager-launcher",
  "apps/codex-manager/src-tauri",
]

[workspace.package]
version = "1.0.22"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
directories = "6"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["custom-protocol", "tray-icon"] }
tauri-build = "2"
tauri-plugin-dialog = "2"
tempfile = "3"
thiserror = "2"
toml_edit = "0.22"
tungstenite = "0.24"
uuid = { version = "1", features = ["v4"] }
winresource = "0.1"
windows = { version = "0.58", features = [
  "ApplicationModel",
  "Foundation_Collections",
  "Management_Deployment",
  "Storage",
  "Win32_Foundation",
  "Win32_Storage_Packaging_Appx",
  "Win32_System_Com",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_UI_Shell",
] }
