[package]
name = "codex-manager-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
directories.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml_edit.workspace = true
tungstenite.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
