[package]
name = "codex-manager"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "codex-manager"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
codex-manager-core = { path = "../../../crates/codex-manager-core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tauri-plugin-dialog.workspace = true

[build-dependencies]
tauri-build.workspace = true
